# k8deployment

./: .env  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-base  Dockerfile-ubuntu  deployment.yaml  go.mod  go.sum  k8deployment-job.yml  kubernetes.yaml  main.c  main.go  test.go
go/: go.mod  go.sum  libkubernetes.go
libs/log/: log.c  log.h
src/: check.c  deploy.c  git.c  git.go  k8deployment.h
